--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 SecretStuff.txt
 EmpacherTestImages/
 EmpacherTestImagesResults/
+EmpacherImagesTemp/
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
