Refined output and added colors on the output corresponding to how close a pixel in range is

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ SecretStuff.txt
 EmpacherTestImages/
 EmpacherTestImagesResults/
 EmpacherImagesTemp/
+EmpacherImagesUnmarked/
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
